CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(gob)
SET(CMAKE_CXX_STANDARD 11) # 设置编译标准为C++11
SET(CMAKE_CXX_FLAGS "/EHsc ${CMAKE_CXX_FLAGS}")
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
# link boost
MESSAGE(STATUS "Link Boost:")
SET(Boost_USE_MULTITHREAD ON)
SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_STATIC_RUNTIME OFF)

FIND_PACKAGE(Boost COMPONENTS log locale REQUIRED) # 这里填入需要的component，例如 log, thread ...

IF(Boost_FOUND)
    # MESSAGE(STATUS "Boost_INCLUDE_DIRS ${Boost_INCLUDE_DIRS}")
    # MESSAGE(STATUS "Boost_LIBRARIES ${Boost_LIBRARIES}")
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
ENDIF()

# add definitions
ADD_DEFINITIONS(-D_WINDOWS)

# include current dir
INCLUDE_DIRECTORIES(..)

# set object src
SET(OBJ_SRCS unit_test.cpp)

# local source files
AUX_SOURCE_DIRECTORY(. OBJ_SRC)
AUX_SOURCE_DIRECTORY(log LOG_SRCS)
AUX_SOURCE_DIRECTORY(event EVENT_SRCS)
# AUX_SOURCE_DIRECTORY(../thirdparty/Remotery/lib REM_SRCS)

# generate target
ADD_EXECUTABLE(${PROJECT_NAME} ${OBJ_SRCS} ${LOG_SRCS} ${EVENT_SRCS} ${REM_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES})